tests/broken/for-no-ident.stderr
error: Expected 'in'
 --> tests/broken/for-no-ident.rs:4:26
  |
4 | #[oxiplate = "{%- for in numbers -%}No ident present{% endfor %}"]
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
